--- a/src/pages/Scoreboard/components/ScoreboardListItem.module.scss
+++ b/src/pages/Scoreboard/components/ScoreboardListItem.module.scss
@@ -20,7 +20,15 @@
   }
 }
 
+.horizontal2{
+  display: flex;
+}
+
 .editor {
   margin: 10px;
   height: 400px;
+}
+
+.trophy {
+  margin-right: 10px;
 }
