--- a/src/index.scss
+++ b/src/index.scss
@@ -41,11 +41,17 @@ p {
   padding-top: 10px;
   padding-left: 20px;
   border-radius: 10px;
+  margin: 5px;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  margin: 10px 5px;
+}
+
+h2{
+  margin: 10px 5px;
 }
 
 label{
