--- a/src/pages/TaskPage/components/ChartDisplay.module.scss
+++ b/src/pages/TaskPage/components/ChartDisplay.module.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   align-items: center;
   border-radius: 10px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 .button {
@@ -16,4 +16,15 @@
   margin: 0px;
   padding: 0px;
   text-align: left;
+}
+.image {
+  border-radius: 10px;
+  margin: 10px;
+}
+
+.imageContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center; 
 }
