--- a/src/pages/TasksPage/Components/TaskPanelDisplay.module.scss
+++ b/src/pages/TasksPage/Components/TaskPanelDisplay.module.scss
@@ -3,11 +3,15 @@
   background-color: variables.$background2;
   padding: 20px;
   border-radius: 10px;
-  margin: 10px;
+  margin: 20px;
 }
 
 .tagsContainer{
   display: flex; 
-  justify-content:space-evenly;
+  justify-content:flex-start;
   margin-top: 10px;
+}
+
+h2{
+  margin-left: 0px;
 }
