--- a/src/pages/TasksPage/TasksPage.module.scss
+++ b/src/pages/TasksPage/TasksPage.module.scss
@@ -1,8 +1,31 @@
-.container{
+@use "/src/variables.scss";
+
+
+.container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: calc(100vh - 65px);
+}
+
+.containerList {
+  flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 30px;
-  flex-wrap: wrap; 
+  align-items: stretch;
+  padding-top: 10px;
+}
+
+.loadMore {
+  align-self: center;
+}
+
+
+.filterPanel {
+  background: variables.$background2;
+  border-radius: 10px;
+  width: 200px;
+  margin: 20px;
+  margin-right: 0px;
+  padding: 20px;
 }
